// Vitest Snapshot v1

exports[`should display the error received 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-34"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          CheckboxLabel
        </h6>
        <div
          class="makeStyles-subscribers-35"
        />
      </div>
      <div
        class="MuiFormGroup-root MuiFormGroup-row"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root makeStyles-style-31 makeStyles-style-33"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-40"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should display the error received 2`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-34"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          CheckboxLabel
        </h6>
        <div
          class="makeStyles-subscribers-35"
        />
      </div>
      <div
        class="MuiFormGroup-root MuiFormGroup-row"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root makeStyles-style-31 makeStyles-style-33"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-40"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
      <p
        class="MuiFormHelperText-root Mui-focused"
      />
      <div
        class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomRight"
        data-testid="error"
      >
        <div
          class="MuiPaper-root MuiSnackbarContent-root MuiPaper-elevation6"
          direction="up"
          role="alert"
          style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiSnackbarContent-message"
          >
            An error has occurred, please refresh the page
          </div>
          <div
            class="MuiSnackbarContent-action"
          >
            <button
              aria-label="close"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render a readOnly checkbox 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-14"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        CheckboxLabel
      </h6>
      <div
        class="makeStyles-subscribers-15"
      />
    </div>
    <div
      class="MuiFormGroup-root MuiFormGroup-row"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiCheckbox-root makeStyles-style-11 makeStyles-style-13 PrivateSwitchBase-disabled-19 Mui-disabled makeStyles-disabled-12 Mui-disabled Mui-disabled"
        data-testid="CheckboxLabel"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-20"
            data-indeterminate="false"
            disabled=""
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
    </div>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render the checkbox 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-4"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        CheckboxLabel
      </h6>
      <div
        class="makeStyles-subscribers-5"
      />
    </div>
    <div
      class="MuiFormGroup-root MuiFormGroup-row"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root makeStyles-style-1 makeStyles-style-3"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-10"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </div>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render the checkbox with empty style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-64"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          CheckboxLabel
        </h6>
        <div
          class="makeStyles-subscribers-65"
        />
      </div>
      <div
        class="MuiFormGroup-root MuiFormGroup-row"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-67 MuiCheckbox-root makeStyles-style-61 makeStyles-style-63"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-70"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the checkbox with style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-54"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          CheckboxLabel
        </h6>
        <div
          class="makeStyles-subscribers-55"
        />
      </div>
      <div
        class="MuiFormGroup-root MuiFormGroup-row"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-57 MuiCheckbox-root makeStyles-style-51 makeStyles-style-53"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-60"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the checkbox without style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-44"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          CheckboxLabel
        </h6>
        <div
          class="makeStyles-subscribers-45"
        />
      </div>
      <div
        class="MuiFormGroup-root MuiFormGroup-row"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-47 MuiCheckbox-root makeStyles-style-41 makeStyles-style-43"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-50"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should send mutation when clicked 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-24"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        CheckboxLabel
      </h6>
      <div
        class="makeStyles-subscribers-25"
      />
    </div>
    <div
      class="MuiFormGroup-root MuiFormGroup-row"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-27 MuiCheckbox-root makeStyles-style-21 makeStyles-style-23"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-30"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </div>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should send mutation when clicked 2`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-24"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        CheckboxLabel
      </h6>
      <div
        class="makeStyles-subscribers-25"
      />
    </div>
    <div
      class="MuiFormGroup-root MuiFormGroup-row"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-27 MuiCheckbox-root makeStyles-style-21 makeStyles-style-23"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-30"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </div>
    <p
      class="MuiFormHelperText-root Mui-focused"
    />
  </div>
</div>
`;
